SFDCGitProject/src/objects/Comparable__c.object
<CustomObject>
    <description>This object will show list of all comparable opportunities.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Comparable_Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Opportunity__c</fullName>
        <label>Base Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Comparable</relationshipLabel>
        <relationshipName>Comparable</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Close_date__c</fullName>
        <formula>Comparable_Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comparable_Opp_Name__c</fullName>
        <formula>Comparable_Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name of the comparable Opp</inlineHelpText>
        <label>Comparable Opp Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comparable_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comparable Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Comparable (Comparable Opportunity)</relationshipLabel>
        <relationshipName>Comparable1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <formula>Text(Comparable_Opportunity__r.Account.Industry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <label>Comparable</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Comparable # {000}</displayFormat>
        <label>Comparable Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comparable</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>